adding a new line

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 <h2>Text input fields</h2>
 <h2>Adding a new line</h2>
+<p>Demo-ing in the class</p>
 
 <form>
   <label for="FIRSTNAME">First name:</label><br>
